--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -287,7 +287,7 @@
       {%- endif -%}
 {%- else -%} 
    <div class="header__account-buttons">
-        <button class="button button--inline" onclick="window.location.href='{{ routes.account_register_url }}'">Register 12</button>
+        <button class="button button--inline" onclick="window.location.href='{{ routes.account_register_url }}'">Register</button>
         <button class="button button--primary" onclick="window.location.href='{{ routes.account_login_url }}'">Log In</button>
       </div>
 {%- endif -%}
