--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -288,7 +288,7 @@
 {%- else -%} 
    <div class="header__account-buttons">
         <button class="button button--inline" onclick="window.location.href='{{ routes.account_register_url }}'">Register</button>
-        <button class="button button--primary" onclick="window.location.href='{{ routes.account_login_url }}'">Log In 123</button>
+        <button class="button button--primary" onclick="window.location.href='{{ routes.account_login_url }}'">Log In</button>
       </div>
 {%- endif -%}
 
