--- a/sections/newsletter.liquid
+++ b/sections/newsletter.liquid
@@ -85,6 +85,7 @@
                     id="Subscribe"
                     aria-label="{{ 'newsletter.button_label' | t }}"
                   >
+                    Submit
                     {% render 'icon-arrow' %}
                   </button>
                 </div>
