--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -164,7 +164,7 @@
                             {% elsif form.posted_successfully? %}
                               aria-describedby="ContactFooter-success"
                             {% endif %}
-                            placeholder="{{ 'newsletter.label' | t }}"
+                            placeholder="{{ 'newsletter.label' | t }} iid"
                             required
                           >
                           <label class="field__label" for="NewsletterForm--{{ section.id }}">
