--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -137,7 +137,7 @@
                       {%- if block.settings.show_social and has_social_icons -%}
                         {%- render 'social-icons', class: 'footer__list-social' -%}
                       {%- endif -%}
-
+test
                        {% if customer.tags contains 'provider' %}
                           hey provider
                         {% elsif customer.tags contains 'customer' %}
